Mon May  4 10:45:56 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_docs.php: Added test for long document text.
    * _restclient_curl.php: Disabled Expect: header as this causes 
      problems with the Flax server (possibly due to a bug in libcurl).

Fri May  1 17:41:58 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * examples/newsml_indexer.php: Started example NewsML indexer.

Fri May  1 14:43:22 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * flaxclient.php: Added default value for query filters.
    * unittests/test_search.php: Added some more tests.
    
Fri May  1 14:07:23 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * unittests/test_search.php: Got searchStructured() and tests working.

Fri May  1 10:22:08 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * unittests/test_search.php: Changed ranking search params.

Thu Apr 30 19:56:49 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_search.php: Added more tests.

Thu Apr 30 17:31:38 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added searchJSON method.
    * unittests/test_search.php: Search unit tests.
    * unittests/runtests.php: Added test_search.

Thu Apr 30 11:26:53 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flax/searchserver/schema.py: Added validation of field properties.
    * flax/searchserver/application.py: Added validation of field properties.
      Disabled field overwrite protection.

Wed Apr 29 15:46:12 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Removed replaceDocument and added searchSimple.
    * unittests/test_docs.php: Added search test.

Wed Apr 29 12:44:25 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added commit() method.
    * unittests/test_fields.php: Added calls to commit().
    * unittests/test_docs.php: Added calls to commit().
